<resources>
    <string name="app_name">BTL App cham soc suc khoe</string>
    <string name="login">Login</string>
    <string name="new_here_re">New Here? Register</string>
    <string name="btnlogin">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_pass">Forgot Password?</string>
    <string name="already_mem">Already Member? Login</string>
    <string name="register">Register</string>
    <string name="full_name">Full Name</string>
</resources>