<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity_login"
    android:background="#FFFFFF"
    android:orientation="vertical"
    android:weightSum="10">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:background="@drawable/rectangle1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="0dp"/>


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="270dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/rectangle2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/login"
            android:layout_width="338dp"
            android:layout_height="67dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="218dp"
            android:fontFamily="@font/nunito_bold"
            android:gravity="top"
            android:text="@string/login"
            android:textAppearance="@style/login"
            app:lineHeight="49sp" />
    </FrameLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@drawable/rectangle3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/btnlogin_register"
            android:layout_width="171dp"
            android:layout_height="34dp"
            android:layout_marginStart="17dp"
            android:layout_marginBottom="7dp"
            android:fontFamily="@font/nunito_semibold"
            android:gravity="top"
            android:text="@string/new_here_re"
            android:textAppearance="@style/new_here_re"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:lineHeight="22sp" />

        <TextView
            android:id="@+id/btnlogin"
            android:layout_width="170dp"
            android:layout_height="60dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/btn_login"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/btnlogin"
            android:textAppearance="@style/btnlogin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/email"
            android:layout_width="338dp"
            android:layout_height="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="356dp"
            android:gravity="top"
            android:text="@string/email"
            android:textAppearance="@style/email"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/etxemail"
            android:layout_width="309dp"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/nhap_tk_mk"
            android:inputType="textPersonName"
            android:paddingLeft="10dp"
            android:textColor="#2F80ED"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email" />

        <TextView
            android:id="@+id/password"
            android:layout_width="338dp"
            android:layout_height="20dp"

            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:gravity="top"
            android:text="@string/password"
            android:textAppearance="@style/password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etxemail" />

        <EditText
            android:id="@+id/etxpassword"
            android:layout_width="309dp"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/nhap_tk_mk"
            android:inputType="textPersonName|textPassword"
            android:paddingLeft="10dp"
            android:textColor="#2F80ED"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password" />

        <TextView
            android:id="@+id/forgot_pass"
            android:layout_width="161dp"
            android:layout_height="34dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="220dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/nunito_bold_italic"
            android:gravity="top"
            android:text="@string/forgot_pass"
            android:textAppearance="@style/forgot_pass"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etxpassword"
            app:lineHeight="19sp" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>