<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity_login"
    android:background="#FFFFFF"
    android:orientation="vertical"
    android:weightSum="10">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="125dp"
            android:background="@drawable/rectangle1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="0dp"/>


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginTop="0dp"
            android:background="@drawable/rectangle2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </FrameLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@drawable/rectangle3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/btnlogin_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="17dp"
            android:layout_marginBottom="18dp"
            android:fontFamily="@font/nunito_semibold"
            android:gravity="top"
            android:text="@string/already_mem"
            android:textAppearance="@style/new_here_re"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:lineHeight="22sp" />

        <TextView
            android:id="@+id/btnregister"
            android:layout_width="170dp"
            android:layout_height="60dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/btn_login"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/register"
            android:textAppearance="@style/btnlogin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:fontFamily="@font/nunito_bold"
            android:gravity="top"
            android:text="@string/register"
            android:textAppearance="@style/login"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lineHeight="49sp" />

        <TextView
            android:id="@+id/full_name"
            android:layout_width="338dp"
            android:layout_height="20dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:gravity="top"
            android:text="@string/full_name"
            android:textAppearance="@style/full_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register" />

        <EditText
            android:id="@+id/etxfullname"
            android:layout_width="309dp"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/nhap_tk_mk"
            android:inputType="textPersonName"
            android:paddingLeft="10dp"
            android:textColor="#2F80ED"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/full_name" />

        <TextView
            android:id="@+id/email"
            android:layout_width="338dp"
            android:layout_height="20dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="10dp"
            android:gravity="top"
            android:text="@string/email"
            android:textAppearance="@style/email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etxfullname" />

        <EditText
            android:id="@+id/etxemail"
            android:layout_width="309dp"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/nhap_tk_mk"
            android:inputType="textPersonName"
            android:paddingLeft="10dp"
            android:textColor="#2F80ED"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email" />

        <TextView
            android:id="@+id/password"
            android:layout_width="338dp"
            android:layout_height="20dp"

            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:gravity="top"
            android:text="@string/password"
            android:textAppearance="@style/password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etxemail" />

        <EditText
            android:id="@+id/etxpassword"
            android:layout_width="309dp"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="32dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/nhap_tk_mk"
            android:inputType="textPersonName|textPassword"
            android:paddingLeft="10dp"
            android:textColor="#2F80ED"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>